[gd_scene load_steps=14 format=3 uid="uid://cujjd8kjb2gqq"]

[ext_resource type="Script" uid="uid://be10h584dg14q" path="res://scripts/score_screen.gd" id="1_c1q6v"]
[ext_resource type="Texture2D" uid="uid://cuxf7m2klunj5" path="res://assets/ui/Plum_Frame_02.png" id="2_dec0w"]
[ext_resource type="FontFile" uid="uid://dcussgvmlehgx" path="res://assets/fonts/BadComic-Regular.ttf" id="3_h6xk6"]
[ext_resource type="Texture2D" uid="uid://utv2ecjmili1" path="res://assets/ui/Small Square Buttons.png" id="4_2vswq"]
[ext_resource type="AudioStream" uid="uid://bvufl8fmoj335" path="res://assets/sfx/African1.mp3" id="5_kkgia"]
[ext_resource type="AudioStream" uid="uid://tjsxqp8mtaas" path="res://assets/sfx/cash-register-kaching-sound-effect.mp3" id="6_vnm47"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1i8on"]
texture = ExtResource("4_2vswq")
texture_margin_left = 4.0
texture_margin_top = 4.0
texture_margin_right = 3.0
texture_margin_bottom = 6.0
region_rect = Rect2(0, 80, 15, 16)
modulate_color = Color(0.392157, 0.392157, 1, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_o8i8v"]
texture = ExtResource("4_2vswq")
texture_margin_left = 3.0
texture_margin_top = 6.0
texture_margin_right = 4.0
texture_margin_bottom = 4.0
region_rect = Rect2(17, 112, 15, 16)
modulate_color = Color(0.392157, 0.392157, 1, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ddmsq"]
texture = ExtResource("4_2vswq")
texture_margin_left = 4.0
texture_margin_top = 5.0
texture_margin_right = 4.0
texture_margin_bottom = 6.0
region_rect = Rect2(0, 111, 16, 17)
modulate_color = Color(0.392157, 0.392157, 1, 1)

[sub_resource type="Animation" id="Animation_1i8on"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1e-05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("InputBlocker:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Click_SFX:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Quit_SFX:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_o8i8v"]
resource_name = "close"
length = 0.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1e-05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("InputBlocker:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1e-05)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Quit_SFX:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_bopw0"]
resource_name = "open"
length = 0.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1e-05), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("InputBlocker:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1e-05), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Click_SFX:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ddmsq"]
_data = {
&"RESET": SubResource("Animation_1i8on"),
&"close": SubResource("Animation_o8i8v"),
&"open": SubResource("Animation_bopw0")
}

[node name="Score_Screen" type="CanvasLayer"]
layer = 3
script = ExtResource("1_c1q6v")

[node name="InputBlocker" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(938, 519)

[node name="InputBlockerColor" type="ColorRect" parent="InputBlocker"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_force_pass_scroll_events = false
color = Color(0, 0, 0, 0.392157)

[node name="ColorRect" type="ColorRect" parent="InputBlocker"]
layout_mode = 2
offset_left = 141.0
offset_top = 137.0
offset_right = 1781.0
offset_bottom = 948.0
color = Color(0, 0, 0, 0.784314)

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 1e-05)
pivot_offset = Vector2(940, 533)
theme_override_constants/margin_left = 80
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 80

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer"]
layout_mode = 2
texture = ExtResource("2_dec0w")
region_rect = Rect2(0, 0, 786, 786)
patch_margin_left = 85
patch_margin_top = 80
patch_margin_right = 85
patch_margin_bottom = 79

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/NinePatchRect/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 100
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 200
alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Time" type="Label" parent="MarginContainer/NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 6
theme_override_constants/shadow_outline_size = 6
theme_override_fonts/font = ExtResource("3_h6xk6")
theme_override_font_sizes/font_size = 128
text = "Time:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Time_Label" type="Label" parent="MarginContainer/NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 6
theme_override_constants/shadow_outline_size = 6
theme_override_fonts/font = ExtResource("3_h6xk6")
theme_override_font_sizes/font_size = 128
text = "05:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Money" type="Label" parent="MarginContainer/NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 6
theme_override_constants/shadow_outline_size = 6
theme_override_fonts/font = ExtResource("3_h6xk6")
theme_override_font_sizes/font_size = 128
text = "Money:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Money_Label" type="Label" parent="MarginContainer/NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 6
theme_override_constants/shadow_outline_size = 6
theme_override_fonts/font = ExtResource("3_h6xk6")
theme_override_font_sizes/font_size = 128
text = "$100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Menu_Button" type="Button" parent="MarginContainer/NinePatchRect/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(700, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("3_h6xk6")
theme_override_font_sizes/font_size = 64
theme_override_styles/hover = SubResource("StyleBoxTexture_1i8on")
theme_override_styles/pressed = SubResource("StyleBoxTexture_o8i8v")
theme_override_styles/normal = SubResource("StyleBoxTexture_ddmsq")
text = "Main Menu・メニュー"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ddmsq")
}

[node name="Click_SFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_kkgia")
volume_db = 24.0

[node name="Quit_SFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_vnm47")
volume_db = 8.0

[connection signal="pressed" from="MarginContainer/NinePatchRect/MarginContainer/VBoxContainer/Menu_Button" to="." method="_on_menu_button_pressed"]
